--- a/.gitmodules
+++ b/.gitmodules
@@ -1,23 +1,23 @@
 [submodule "lkl"]
 	path = lkl
-	url = https://github.com/lsds/lkl.git
+	url = https://hub.fastgit.org/lsds/lkl.git
 	branch = upstream-refactor
 [submodule "host-musl"]
 	path = host-musl
-	url = https://github.com/lsds/musl.git
+	url = https://hub.fastgit.org/lsds/musl.git
 [submodule "sgx-lkl-musl"]
 	path = sgx-lkl-musl
-	url = https://github.com/lsds/sgx-lkl-musl.git
+	url = https://hub.fastgit.org/lsds/sgx-lkl-musl.git
 	branch = oe_port
 [submodule "openenclave"]
 	path = openenclave
-	url = https://github.com/openenclave/openenclave.git
+	url = https://hub.fastgit.org/openenclave/openenclave.git
 	branch = feature/sgx-lkl-support
 [submodule "third_party/argon2"]
 	path = third_party/argon2
-	url = https://github.com/P-H-C/phc-winner-argon2
+	url = https://hub.fastgit.org/lsds/sgx-lkl-musl.git
 	branch = master
 [submodule "ltp"]
 	path = ltp
-	url = https://github.com/lsds/ltp.git
+	url = https://hub.fastgit.org/lsds/ltp.git
 	branch= sgx-lkl
