--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	branch = feature/sgx-lkl-support
 [submodule "third_party/argon2"]
 	path = third_party/argon2
-	url = https://hub.fastgit.org/lsds/sgx-lkl-musl.git
+	url = https://hub.fastgit.org/P-H-C/phc-winner-argon2
 	branch = master
 [submodule "ltp"]
 	path = ltp
